unpackaged/main/default/objects/ETI_Visual_Defect_Test__c/ETI_Visual_Defect_Test__c.object-meta.xml
<CustomObject>
    <label>Visual Defect Test</label>
    <nameField>
        <displayFormat>VDT-{0000}</displayFormat>
        <label>Visual Defect Test Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ETI Visual Defect Test</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>