unpackaged/main/default/objects/ETI_Visual_Defect_Test__c/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>