unpackaged/main/default/objects/ETI_Visual_Defect_Test__c/fields/Ord_No__c.field-meta.xml
<CustomField>
    <fullName>Ord_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Ord No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>