unpackaged/main/default/objects/ETI_Visual_Defect_Test__c/fields/Prof_Id__c.field-meta.xml
<CustomField>
    <fullName>Prof_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Prof Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>