unpackaged/main/default/objects/ETI_Visual_Defect_Test__c/fields/Refer_Id__c.field-meta.xml
<CustomField>
    <fullName>Refer_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refer Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>