unpackaged/main/default/objects/ETI_Visual_Defect_Test__c/fields/Test_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Test_Type_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Type Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>