unpackaged/main/default/objects/ETI_Visual_Defect_Test__c/fields/Test_Type_Name_Ar__c.field-meta.xml
<CustomField>
    <fullName>Test_Type_Name_Ar__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Test Type Name Ar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>