unpackaged/main/default/objects/ETI_Visual_Defect_Test__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LIGHT</fullName>
            </value>
            <value>
                <fullName>STEERING</fullName>
            </value>
            <value>
                <fullName>SUSPENSION</fullName>
            </value>
            <value>
                <fullName>BRAKE SYSTEM</fullName>
            </value>
            <value>
                <fullName>TIRES AND RIMS</fullName>
            </value>
            <value>
                <fullName>CHASSIS</fullName>
            </value>
            <value>
                <fullName>BODY</fullName>
            </value>
            <value>
                <fullName>GLASSES</fullName>
            </value>
            <value>
                <fullName>ENGINE</fullName>
            </value>
            <value>
                <fullName>GENERAL ITEMS</fullName>
            </value>
            <value>
                <fullName>FUEL SYSTEM PROTECTION</fullName>
            </value>
            <value>
                <fullName>UNDER CHASSIS</fullName>
            </value>
            <value>
                <fullName>VEHICLE CONDITION</fullName>
            </value>
            <value>
                <fullName>DOCUMENTS REQUIRED</fullName>
            </value>
            <value>
                <fullName>ADFCA VISUAL DEFECT</fullName>
            </value>
            <value>
                <fullName>SCHOOL BUS INFORMATION</fullName>
            </value>
            <value>
                <fullName>DOCUMENTS COLLECTED</fullName>
            </value>
            <value>
                <fullName>COMMENTS</fullName>
            </value>
            <value>
                <fullName>VEHICLE INFORMATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>