unpackaged/main/default/objects/ETI_Visual_Defect_Test__c/fields/Type_Level__c.field-meta.xml
<CustomField>
    <fullName>Type_Level__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Type Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>