unpackaged/main/default/objects/ETI_Visual_Defect_Test__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Ord_No__c</columns>
    <columns>Id__c</columns>
    <columns>Prof_Id__c</columns>
    <columns>Refer_Id__c</columns>
    <columns>Test_Type_Id__c</columns>
    <columns>Test_Type_Name_Ar__c</columns>
    <columns>Test_Type_Name_En__c</columns>
    <columns>Type__c</columns>
    <columns>Type_Level__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>